--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	</div>
 	
 	<div class="buttons" >
-	<button id="rock"><img src="rock.png" class="bttnpic" ></button>
-	<button id="paper"><img src="paper.png" class="bttnpic" ></button>
-	<button id="scissor"><img src="scissors.png" class="bttnpic" ></button>
+	<button id="rock"><img src="Rock.png" class="bttnpic" ></button>
+	<button id="paper"><img src="Paper.png" class="bttnpic" ></button>
+	<button id="scissor"><img src="Scissors.png" class="bttnpic" ></button>
 	</div>
 </div>
 
