--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <div class="gameboard" >
 	<p id="pyou" >You</p>
 	<div id="image1" >
-	<img src="rock.png" id="1playerimg" >
+	<img src="Rock.png" id="1playerimg" >
 	</div>
 	<p id="penemy" >Bot</p>
 	<div id="image2" >
-	<img src="rock.png" id="2playerimg" >
+	<img src="Rock.png" id="2playerimg" >
 	</div>
 	
 	<div class="buttons" >
